app/logic/expression/filter/filterParser.mjs
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';
  }

  format(sources) {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find((s) => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s =
        this.location.source &&
        typeof this.location.source.offset === 'function'
          ? this.location.source.offset(s)
          : s;
      const loc =
        this.location.source + ':' + offset_s.line + ':' + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = ''.padEnd(offset_s.line.toString().length, ' ');
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = last - s.column || 1;
        str +=
          '\n --> ' +
          loc +
          '\n' +
          filler +
          ' |\n' +
          offset_s.line +
          ' | ' +
          line +
          '\n' +
          filler +
          ' | ' +
          ''.padEnd(s.column - 1, ' ') +
          ''.padEnd(hatLen, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(
      RegExp.prototype,
      'unicode',
    )
      ? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable, (ch) => '\\u{' + hex(ch) + '}');
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/"/g, '\\"')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      );
    }

    function classEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/\]/g, '\\]')
          .replace(/\^/g, '\\^')
          .replace(/-/g, '\\-')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      );
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"';
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) =>
          Array.isArray(part)
            ? classEscape(part[0]) + '-' + classEscape(part[1])
            : classEscape(part),
        );

        return (
          '[' +
          (expectation.inverted ? '^' : '') +
          escapedParts.join('') +
          ']' +
          (expectation.unicode ? 'u' : '')
        );
      },

      any() {
        return 'any character';
      },

      end() {
        return 'end of input';
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + ' or ' + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(', ') +
            ', or ' +
            descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input';
    }

    return (
      'Expected ' +
      describeExpected(expected) +
      ' but ' +
      describeFound(found) +
      ' found.'
    );
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = 'or';
  const peg$c1 = 'and';
  const peg$c2 = 'not';
  const peg$c3 = '(';
  const peg$c4 = ')';
  const peg$c5 = '[';
  const peg$c6 = ']';
  const peg$c7 = '.';
  const peg$c8 = ':>=';
  const peg$c9 = ':<=';
  const peg$c10 = ':<>';
  const peg$c11 = ':>';
  const peg$c12 = ':<';
  const peg$c13 = ':';
  const peg$c14 = '"';
  const peg$c15 = "'";
  const peg$c16 = '\\';
  const peg$c17 = 'u';
  const peg$c18 = '-';
  const peg$c19 = 'true';
  const peg$c20 = 'false';
  const peg$c21 = 'null';
  const peg$c22 = '..';

  const peg$r0 = /^[\p{L}_]/iu;
  const peg$r1 = /^[\p{L}0-9_]/iu;
  const peg$r2 = /^[a-zA-Z0-9_\-]/;
  const peg$r3 = /^["'-(]/;
  const peg$r4 = /^[^ \t\n\r)]/;
  const peg$r5 = /^[^"\\]/;
  const peg$r6 = /^[^'\\]/;
  const peg$r7 = /^[\\\/bfnrt'"]/;
  const peg$r8 = /^[0-9a-fA-F]/;
  const peg$r9 = /^[0-9]/;
  const peg$r10 = /^[0-9a-f]/;
  const peg$r11 = /^[ \t\n\r]/;

  const peg$e0 = peg$literalExpectation('OR', true);
  const peg$e1 = peg$literalExpectation('AND', true);
  const peg$e2 = peg$literalExpectation('NOT', true);
  const peg$e3 = peg$literalExpectation('(', false);
  const peg$e4 = peg$literalExpectation(')', false);
  const peg$e5 = peg$literalExpectation('[', false);
  const peg$e6 = peg$literalExpectation(']', false);
  const peg$e7 = peg$literalExpectation('.', false);
  const peg$e8 = peg$classExpectation(['\\p{L}', '_'], false, true, true);
  const peg$e9 = peg$classExpectation(
    ['\\p{L}', ['0', '9'], '_'],
    false,
    true,
    true,
  );
  const peg$e10 = peg$literalExpectation(':>=', false);
  const peg$e11 = peg$literalExpectation(':<=', false);
  const peg$e12 = peg$literalExpectation(':<>', false);
  const peg$e13 = peg$literalExpectation(':>', false);
  const peg$e14 = peg$literalExpectation(':<', false);
  const peg$e15 = peg$literalExpectation(':', false);
  const peg$e16 = peg$classExpectation(
    [['a', 'z'], ['A', 'Z'], ['0', '9'], '_', '-'],
    false,
    false,
    false,
  );
  const peg$e17 = peg$classExpectation(['"', ["'", '(']], false, false, false);
  const peg$e18 = peg$classExpectation(
    [' ', '\t', '\n', '\r', ')'],
    true,
    false,
    false,
  );
  const peg$e19 = peg$literalExpectation('"', false);
  const peg$e20 = peg$literalExpectation("'", false);
  const peg$e21 = peg$classExpectation(['"', '\\'], true, false, false);
  const peg$e22 = peg$literalExpectation('\\', false);
  const peg$e23 = peg$classExpectation(["'", '\\'], true, false, false);
  const peg$e24 = peg$classExpectation(
    ['\\', '/', 'b', 'f', 'n', 'r', 't', "'", '"'],
    false,
    false,
    false,
  );
  const peg$e25 = peg$literalExpectation('u', false);
  const peg$e26 = peg$classExpectation(
    [
      ['0', '9'],
      ['a', 'f'],
      ['A', 'F'],
    ],
    false,
    false,
    false,
  );
  const peg$e27 = peg$literalExpectation('-', false);
  const peg$e28 = peg$classExpectation([['0', '9']], false, false, false);
  const peg$e29 = peg$literalExpectation('true', true);
  const peg$e30 = peg$literalExpectation('false', true);
  const peg$e31 = peg$classExpectation(
    [
      ['0', '9'],
      ['a', 'f'],
    ],
    false,
    false,
    false,
  );
  const peg$e32 = peg$literalExpectation('null', true);
  const peg$e33 = peg$literalExpectation('..', false);
  const peg$e34 = peg$classExpectation(
    [' ', '\t', '\n', '\r'],
    false,
    false,
    false,
  );
  const peg$e35 = peg$anyExpectation();

  function peg$f0(expression) {
    return expression;
  }
  function peg$f1(left, right) {
    return makeOp('or', left, right);
  }
  function peg$f2(left, right) {
    return makeOp('and', left, right);
  }
  function peg$f3(exp1, exp2) {
    if (exp1.type === 'query' && exp2.type === 'query') {
      return makeQuery(exp1.content + ' ' + exp2.content);
    } else if (
      exp1.type === 'query' &&
      exp2.type === 'and' &&
      exp2.left.type === 'query'
    ) {
      const res = createExpr({
        ...exp2,
        left: makeQuery(exp1.content + ' ' + exp2.left.content),
      });
      if (options.trackLocations) {
        const loc = location();
        res.left.location = {
          start: loc.start,
          end: exp2.left.location.end,
        };
      }
      return res;
    } else {
      return makeOp('and', exp1, exp2);
    }
  }
  function peg$f4(expression) {
    return makeNot(expression);
  }
  function peg$f5(expression) {
    return makeGroup(expression);
  }
  function peg$f6(field) {
    if (!options.rootFilters) {
      return true;
    }
    return options.rootFilters.includes(field[0]) || field.length > 1;
  }
  function peg$f7(field, operator, value) {
    return makeFilter(field, operator, value);
  }
  function peg$f8(block) {
    return !options.rootFilters || !options.rootFilters.includes(block);
  }
  function peg$f9(block, operator, value) {
    return makeFilter([block, 'value'], operator, value);
  }
  function peg$f10(field, sub, rest) {
    return [field, ...sub.map((s) => s[1].content), ...(rest ? rest[1] : [])];
  }
  function peg$f11() {
    return text();
  }
  function peg$f12() {
    return '>=';
  }
  function peg$f13() {
    return '<=';
  }
  function peg$f14() {
    return '!=';
  }
  function peg$f15() {
    return '>';
  }
  function peg$f16() {
    return '<';
  }
  function peg$f17() {
    return '=';
  }
  function peg$f18() {
    return makeConst(text(), 'string');
  }
  function peg$f19(value) {
    return makeQuery(value);
  }
  function peg$f20() {
    return text();
  }
  function peg$f21(chars) {
    return makeConst(chars.join(''), 'string');
  }
  function peg$f22(chars) {
    return makeConst(chars.join(''), 'string');
  }
  function peg$f23() {
    return text();
  }
  function peg$f24(sequence) {
    return sequence;
  }
  function peg$f25() {
    return text();
  }
  function peg$f26(sequence) {
    return sequence;
  }
  function peg$f27() {
    const escapeMap = {
      '"': '"',
      "'": "'",
      '\\': '\\',
      '/': '/',
      b: '\b',
      f: '\f',
      n: '\n',
      r: '\r',
      t: '\t',
    };
    return escapeMap[text()];
  }
  function peg$f28() {
    4;
  }
  function peg$f29(digits) {
    return String.fromCharCode(parseInt(digits, 16));
  }
  function peg$f30(minus, integer, fraction) {
    if (fraction) {
      return makeConst(
        parseFloat(
          (minus ? '-' : '') +
            integer.join('') +
            (fraction ? '.' + fraction[1].join('') : ''),
        ),
        'float',
      );
    } else {
      return makeConst(parseInt((minus ? '-' : '') + integer.join('')), 'int');
    }
  }
  function peg$f31() {
    return makeConst(true, 'bool');
  }
  function peg$f32() {
    return makeConst(false, 'bool');
  }
  function peg$f33() {
    return text();
  }
  function peg$f34(value) {
    return !isNaN(new Date(value));
  }
  function peg$f35(value) {
    return makeConst(value, 'date');
  }
  function peg$f36() {
    return makeConst(text(), 'uuid');
  }
  function peg$f37() {
    return makeConst(null, 'null');
  }
  function peg$f38(start, end) {
    return makeRange(start, end);
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".',
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    );
  }

  function error(message, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return '';
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: 'class', parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: 'any' };
  }

  function peg$endExpectation() {
    return { type: 'end' };
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && typeof peg$source.offset === 'function') {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseLogicalOrExpression();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseEOF();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLogicalOrExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseLogicalAndExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = input.substr(peg$currPos, 2);
        if (s3.toLowerCase() === peg$c0) {
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e0);
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseLogicalOrExpression();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f1(s1, s5);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseLogicalAndExpression();
    }

    return s0;
  }

  function peg$parseLogicalAndExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseMultiExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = input.substr(peg$currPos, 3);
        if (s3.toLowerCase() === peg$c1) {
          peg$currPos += 3;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e1);
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseLogicalAndExpression();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f2(s1, s5);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseMultiExpression();
    }

    return s0;
  }

  function peg$parseMultiExpression() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseNotExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseMultiExpression();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNotExpression();
    }

    return s0;
  }

  function peg$parseNotExpression() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 3);
    if (s1.toLowerCase() === peg$c2) {
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e2);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseNotExpression();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsePrimaryExpression();
    }

    return s0;
  }

  function peg$parsePrimaryExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e3);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseLogicalOrExpression();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 41) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e4);
          }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseFilterExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseQueryExpression();
      }
    }

    return s0;
  }

  function peg$parseFilterExpression() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseFilterPath();
    if (s1 !== peg$FAILED) {
      peg$savedPos = peg$currPos;
      s2 = peg$f6(s1);
      if (s2) {
        s2 = undefined;
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseOperator();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseValue();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f7(s1, s3, s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseFieldIdenifier();
      if (s1 !== peg$FAILED) {
        peg$savedPos = peg$currPos;
        s2 = peg$f8(s1);
        if (s2) {
          s2 = undefined;
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseOperator();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseValue();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f9(s1, s3, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseFilterPath() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseFieldIdenifier();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 91) {
        s4 = peg$c5;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e5);
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseStringLiteral();
        if (s5 === peg$FAILED) {
          s5 = peg$parseNumberLiteral();
        }
        if (s5 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 93) {
            s6 = peg$c6;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e6);
            }
          }
          if (s6 !== peg$FAILED) {
            s4 = [s4, s5, s6];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 91) {
          s4 = peg$c5;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e5);
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseStringLiteral();
          if (s5 === peg$FAILED) {
            s5 = peg$parseNumberLiteral();
          }
          if (s5 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 93) {
              s6 = peg$c6;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$e6);
              }
            }
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 46) {
        s4 = peg$c7;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e7);
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseFilterPath();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f10(s1, s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFieldIdenifier() {
    let s0, s1, s2, s3, s4, s5;
